# Bookshelf-Scanner

./: .gitignore  BookSegmenter-README.md  README.md  fuzzy_matching.py  pyproject.toml  to-do.md
BookSegmenter/: BookSegmenter.py  BookSegmenter_base.py  YOLOv8.py
ParameterOptimizer/: ParameterOptimizer.py  notes.md  optimized_results.json
TextExtractor/: README.md  TextExtractor.py  notes.md  ocr_results.json  params.yml
akre/Hough Lines/: james_bookshelf_scanner.py
akre/OpenSheves8/: .env.template  test.ipynb
bookshelf_scanner/: __init__.py  __main__.py  ideas.md
bookshelf_scanner/config/: extractor.yml  optimizer.yml  params.yml
bookshelf_scanner/core/approval_layer/: fallback_approver.py
bookshelf_scanner/core/book_segmenter/: README.md  __init__.py  __main__.py  base.py  segmenter.py  utils.py  yolov8.py
bookshelf_scanner/core/config_optimizer/: README.md  __init__.py  __main__.py  optimizer.py
bookshelf_scanner/core/config_optimizer/models/: meta_learner.pt
bookshelf_scanner/core/fuzzy_matcher/: README.md  __init__.py  match_results.json  matcher.py
bookshelf_scanner/core/match_approver/: README.md  __init__.py  __main__.py  approver.py
bookshelf_scanner/core/module_logger/: logger.py
bookshelf_scanner/core/parameter_optimizer/: __init__.py  __main__.py  notes.md  optimized_results.json  optimizer.py  to-do.md
bookshelf_scanner/core/parameter_optimizer/models/: meta_learner.pt
bookshelf_scanner/core/text_extractor/: README.md  __init__.py  __main__.py  extractor.py  ocr_results.json
bookshelf_scanner/data/results/: approvals.csv  approvals.json  extractor.json  matcher.json  matcherToCSV.py  matcher_results.csv  optimizer.json  segmenter.json
bookshelf_scanner/data/utils/: convert_to_duckdb.py
bookshelf_scanner/dev/akre/Hough Lines/: book_detection.py  james_bookshelf_scanner.py  params.yml  shelf_detection.py
bookshelf_scanner/dev/akre/Yolo11/: README.dataset.txt
bookshelf_scanner/dev/akre/Yolo11/train/: train.ipynb
obrien/: test.py
parkington/: bookshelf_scanner.py  config.json  ideas.md  notes.md  params.yml
