[tool.poetry]
name         = "Bookshelf Scanner"
version      = "0.0.0"
description  = "Required packages for the final project for CS5330."
authors      = ["James Parkington <pongs.acreage.0o@icloud.com>"]
readme       = "README.md"

[tool.poetry.dependencies]
python        = "^3.12"
easyocr       = "*"
opencv-python = "*"
ruamel-yaml   = "*"
torch         = "*"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"