[tool.poetry]
name         = "bookshelf-scanner"
version      = "0.0.0"
description  = "Required packages for the final project for CS5330."
authors      = ["James Parkington <pongs.acreage.0o@icloud.com>"]
readme       = "README.md"
packages     = [{ include = "bookshelf_scanner" }]

[tool.poetry.scripts]
book-segmenter   = "bookshelf_scanner.core.book_segmenter.__main__:main"
text-extractor   = "bookshelf_scanner.core.text_extractor.__main__:main"
config-optimizer = "bookshelf_scanner.core.config_optimizer.__main__:main"
fuzzy-matcher    = "bookshelf_scanner.core.fuzzy_matcher.__main__:main"

[tool.poetry.dependencies]
python        = "^3.12"

duckdb        = "*"
easyocr       = "*"
matplotlib    = "*"
omegaconf     = "*"
onnxruntime   = "*"
opencv-python = "*"
rapidfuzz     = "*"
torch         = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"